# PkmGCTools

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
LibPkmGC/: CMakeLists.txt  README.md
LibPkmGC/include/LibPkmGC/Base/: DataStruct.h  Pokemon.h  PokemonBox.h  PokemonString.h
LibPkmGC/include/LibPkmGC/Colosseum/Common/: BagData.h  BattleModeData.h  DaycareData.h  Everything.h  GameConfigData.h  GroupBattleRule.h  MailboxData.h  PCData.h  PlayerData.h  Pokemon.h  PokemonBox.h  RibbonDescriptionsData.h  StrategyMemoData.h  StrategyMemoEntry.h  TrainerData.h
LibPkmGC/include/LibPkmGC/Colosseum/SaveEditing/: Save.h  SaveSlot.h
LibPkmGC/include/LibPkmGC/Core/: Config.h  Crypto.h  IntegerManip.h  IntegerTypes.h  ItemInfo.h  LCRNG32.h  Localization.h  MoveInfo.h  PokemonInfo.h  ShadowPokemonInfo.h  TypeInfo.h  VersionInfo.h
LibPkmGC/include/LibPkmGC/Core/Detail/: AbilityNames.h  IntegerManipCode.h  ItemNames.h  MoveNames.h  NatureNames.cpp  NatureNames.h  RibbonDescriptions.h  SpeciesNames.h  StructMacros.h  TypeNames.h
LibPkmGC/include/LibPkmGC/GBA/: Pokemon.h  PokemonString.h
LibPkmGC/include/LibPkmGC/GBA/Detail/: GBACharTables.h
LibPkmGC/include/LibPkmGC/GC/Common/: BagData.h  BattleModeData.h  DaycareData.h  Everything.h  GameConfigData.h  GroupBattleRule.h  MailboxData.h  PCData.h  PlayerData.h  Pokemon.h  PokemonBox.h  PokemonString.h  RibbonDescriptionsData.h  StrategyMemoData.h  StrategyMemoEntry.h  TrainerData.h
LibPkmGC/include/LibPkmGC/GC/SaveEditing/: Save.h  SaveSlot.h
LibPkmGC/include/LibPkmGC/XD/Common/: BagData.h  BattleModeData.h  DaycareData.h  Everything.h  GameConfigData.h  GroupBattleRule.h  MailboxData.h  PCData.h  PlayerData.h  Pokemon.h  PokemonBox.h  PurificationChamber.h  PurifierData.h  RibbonDescriptionsData.h  StrategyMemoData.h  StrategyMemoEntry.h  TrainerData.h
LibPkmGC/include/LibPkmGC/XD/SaveEditing/: Save.h  SaveSlot.h
LibPkmGC/src/LibPkmGC/Base/: DataStruct.cpp  Pokemon.cpp  PokemonBox.cpp  PokemonString.cpp
LibPkmGC/src/LibPkmGC/Colosseum/Common/: BagData.cpp  BattleModeData.cpp  DaycareData.cpp  GameConfigData.cpp  GroupBattleRule.cpp  MailboxData.cpp  PCData.cpp  PlayerData.cpp  Pokemon.cpp  PokemonBox.cpp  RibbonDescriptionsData.cpp  StrategyMemoData.cpp  StrategyMemoEntry.cpp  TrainerData.cpp
LibPkmGC/src/LibPkmGC/Colosseum/SaveEditing/: Save.cpp  SaveSlot.cpp
LibPkmGC/src/LibPkmGC/Core/: Crypto.cpp  ItemInfo.cpp  Localization.cpp  MoveInfo.cpp  PokemonInfo.cpp  ShadowPokemonInfo.cpp  VersionInfo.cpp
LibPkmGC/src/LibPkmGC/Core/Detail/: AbilityNames.cpp  ItemNames.cpp  MoveNames.cpp  RibbonDescriptions.cpp  SpeciesNames.cpp  TypeNames.cpp
LibPkmGC/src/LibPkmGC/Detail/: CircularDependencies.cpp
LibPkmGC/src/LibPkmGC/GBA/: Pokemon.cpp  PokemonString.cpp
LibPkmGC/src/LibPkmGC/GBA/Detail/: GBACharTables.cpp
LibPkmGC/src/LibPkmGC/GC/Common/: BagData.cpp  BattleModeData.cpp  DaycareData.cpp  GameConfigData.cpp  GroupBattleRule.cpp  MailboxData.cpp  PCData.cpp  PlayerData.cpp  Pokemon.cpp  PokemonBox.cpp  PokemonString.cpp  RibbonDescriptionsData.cpp  StrategyMemoData.cpp  StrategyMemoEntry.cpp  TrainerData.cpp
LibPkmGC/src/LibPkmGC/GC/Detail/: CircularDependencies.cpp
LibPkmGC/src/LibPkmGC/GC/SaveEditing/: Save.cpp  SaveSlot.cpp
LibPkmGC/src/LibPkmGC/XD/Common/: BagData.cpp  BattleModeData.cpp  DaycareData.cpp  GameConfigData.cpp  GroupBattleRule.cpp  MailboxData.cpp  PCData.cpp  PlayerData.cpp  Pokemon.cpp  PokemonBox.cpp  PurificationChamber.cpp  PurifierData.cpp  RibbonDescriptionsData.cpp  StrategyMemoData.cpp  StrategyMemoEntry.cpp  TrainerData.cpp
LibPkmGC/src/LibPkmGC/XD/SaveEditing/: Save.cpp  SaveSlot.cpp
PkmGCSaveEditor/: CMakeLists.txt  README.md
PkmGCSaveEditor/resources/: PkmGCSaveEditor.rc
PkmGCSaveEditor/src/: MainWindow.cpp  MainWindow.h  main.cpp
PkmGCSaveEditor/src/Core/: AutocompletingComboBox.cpp  AutocompletingComboBox.h  DataUI.cpp  DataUI.h  Globals.cpp  Globals.h  IDataUI.h  ItemComboBox.cpp  ItemComboBox.h  ItemPocketEditor.cpp  ItemPocketEditor.h  TrainerInfoLayout.cpp  TrainerInfoLayout.h  UnsignedSpinbox.h  VersionInfoLayout.cpp  VersionInfoLayout.h
PkmGCSaveEditor/src/GCUIs/: BagEditor.cpp  BagEditor.h  DaycareUI.cpp  DaycareUI.h  GameConfigUI.cpp  GameConfigUI.h  PCUI.cpp  PCUI.h  PlayerUI.cpp  PlayerUI.h  PokemonBoxEditor.cpp  PokemonBoxEditor.h  PokemonDisplayWidget.cpp  PokemonDisplayWidget.h  PokemonUI.cpp  PokemonUI.h  RibbonDescriptionsUI.cpp  RibbonDescriptionsUI.h  StrategyMemoEntryWidget.cpp  StrategyMemoEntryWidget.h  StrategyMemoUI.cpp  StrategyMemoUI.h
PkmGCSaveEditor/src/XDUIs/: PurifierUI.cpp  PurifierUI.h
PkmGCSaveEditor/translations/: PkmGCSaveEditor_de.ts  PkmGCSaveEditor_en.ts  PkmGCSaveEditor_fr.ts
